# sqlpp23

./: .appveyor.yml  .gitignore  CMakeLists.txt  ODBC_HANDOFF.md  README.md  wishlist.md
modules/: CMakeLists.txt  sqlpp23.core.cppm  sqlpp23.mock_db.cppm  sqlpp23.mysql.cppm  sqlpp23.odbc.cppm  sqlpp23.postgresql.cppm  sqlpp23.ranges.cppm  sqlpp23.sqlite3.cppm
tests/core/: CMakeLists.txt
tests/core/asserts/: CMakeLists.txt  bad_execute.cpp  bad_prepare.cpp  bad_returning_as.cpp  bad_select_as.cpp  incompatible_execute.cpp  incompatible_prepare.cpp  incompatible_to_sql_string.cpp
tests/core/constraints/aggregate_function/: CMakeLists.txt  avg.cpp  count.cpp  max.cpp  min.cpp  sum.cpp
tests/core/constraints/basic/: CMakeLists.txt  join.cpp  value.cpp
tests/core/constraints/clause/: CMakeLists.txt  cte.cpp  from.cpp  group_by.cpp  having.cpp  insert_value_list.cpp  into.cpp  limit.cpp  offset.cpp  on_conflict.cpp  order_by.cpp  returning.cpp  select_as.cpp  select_column_list.cpp  select_flag_list.cpp  single_table.cpp  truncate.cpp  union.cpp  union_order_by.cpp  update_set_list.cpp  using.cpp  where.cpp  with.cpp
tests/core/constraints/function/: CMakeLists.txt  coalesce.cpp  concat.cpp
tests/core/constraints/operator/: CMakeLists.txt  any.cpp  as_expression.cpp  assign_expression.cpp  case.cpp  cast.cpp  exists.cpp
tests/core/constraints/query/: CMakeLists.txt  dynamic.cpp
tests/core/helpers/: CMakeLists.txt  circular_buffer.cpp
tests/core/meta/: CMakeLists.txt  alias.cpp  table_alias.cpp
tests/core/module/: sqlpp23.test.core.tables.cppm
tests/core/modules/: README.md  sqlpp23.test.core.tables.cppm  test.cpp
tests/core/required_compile_failures/: CMakeLists.txt  bad_prepare.cpp  bad_returning_as.cpp  bad_select_as.cpp  incompatible_prepare.cpp  incompatible_to_sql_string.cpp
tests/core/serialize/: CMakeLists.txt  DynamicWhere.cpp  Insert.cpp  Lower.cpp  ParameterizedVerbatim.cpp  TableAlias.cpp  Trim.cpp  Upper.cpp
tests/core/serialize/aggregate_function/: CMakeLists.txt  avg.cpp  count.cpp  max.cpp  min.cpp  over.cpp  sum.cpp
tests/core/serialize/basic/: CMakeLists.txt  join.cpp  parameter.cpp  schema_qualified_table.cpp  value.cpp  verbatim.cpp  verbatim_table.cpp
tests/core/serialize/clause/: CMakeLists.txt  cte.cpp  delete_from.cpp  for_update.cpp  from.cpp  group_by.cpp  having.cpp  insert.cpp  insert_columns.cpp  insert_default_values.cpp  insert_set.cpp  limit.cpp  offset.cpp  on_conflict.cpp  order_by.cpp  returning.cpp  select.cpp  select_as.cpp  select_columns.cpp  single_table.cpp  truncate.cpp  union.cpp  union_order_by.cpp  update.cpp  update_set.cpp  using.cpp  where.cpp  with.cpp
tests/core/serialize/data_types/: CMakeLists.txt  blob.cpp  date.cpp  day_point.cpp  float.cpp  text.cpp  time.cpp  timestamp.cpp
tests/core/serialize/function/: CMakeLists.txt  all.cpp  coalesce.cpp  concat.cpp  current_date.cpp  current_time.cpp  current_timestamp.cpp  flatten.cpp  get_sql_name.cpp
tests/core/serialize/name/: CMakeLists.txt  create_name_tag.cpp
tests/core/serialize/operator/: CMakeLists.txt  all.cpp  any.cpp  arithmetic_expression.cpp  as_expression.cpp  assign_expression.cpp  between_expression.cpp  bit_expression.cpp  case_expression.cpp  cast.cpp  comparison_expression.cpp  exists_expression.cpp  in_expression.cpp  logical_expression.cpp  sort_order_expression.cpp
tests/core/serialize/query/: CMakeLists.txt  custom_query.cpp  statement.cpp
tests/core/types/: CMakeLists.txt  dynamic.cpp  result_row.cpp
tests/core/types/aggregate_function/: CMakeLists.txt  avg.cpp  count.cpp  max.cpp  min.cpp  over.cpp  sum.cpp
tests/core/types/basic/: CMakeLists.txt  column.cpp  join.cpp  parameter.cpp  schema_qualified_table.cpp  table.cpp  table_as.cpp  value.cpp  verbatim.cpp  verbatim_table.cpp
tests/core/types/clause/: CMakeLists.txt  cte.cpp  from.cpp  group_by.cpp  insert_value_list.cpp  into.cpp  select_as.cpp  select_columns.cpp  single_table.cpp  with.cpp
tests/core/types/data_type/: CMakeLists.txt  boolean.cpp
tests/core/types/detail/: CMakeLists.txt  get_last_if.cpp
tests/core/types/function/: CMakeLists.txt  coalesce.cpp  flatten.cpp
tests/core/types/name/: CMakeLists.txt  char_sequence.cpp
tests/core/types/operator/: CMakeLists.txt  any.cpp  arithmetic_expression.cpp  as_expression.cpp  assign_expression.cpp  between_expression.cpp  bit_expression.cpp  case_expression.cpp  comparison_expression.cpp  (+4 more)
tests/core/usage/: CMakeLists.txt  CustomQuery.cpp  CustomType.cpp  DateTime.cpp  DateTimeParser.cpp  Function.cpp  Insert.cpp  Interpret.cpp  Minimalistic.cpp  Prepared.cpp  Result.cpp  Select.cpp  SelectType.cpp  Union.cpp  Update.cpp  With.cpp  delete_from.cpp
tests/postgresql/: CMakeLists.txt
tests/postgresql/asserts/: CMakeLists.txt  bad_execute.cpp  bad_prepare.cpp  incompatible_execute.cpp  incompatible_prepare.cpp
tests/postgresql/constraints/: CMakeLists.txt
tests/postgresql/module/: sqlpp23.test.postgresql.tables.cppm
tests/postgresql/modules/: README.md  sqlpp23.test.postgresql.tables.cppm  test.cpp
tests/postgresql/recipes/: CMakeLists.txt  optimistic_concurrency_control.cpp  thread_local_connection.cpp
tests/postgresql/required_compile_failures/: CMakeLists.txt
tests/postgresql/serialize/: CMakeLists.txt  Float.cpp
tests/postgresql/usage/: Basic.cpp  BasicConstConfig.cpp  Blob.cpp  CMakeLists.txt  Connection.cpp  ConnectionPool.cpp  Date.cpp  DateTime.cpp  Exceptions.cpp  InsertOnConflict.cpp  Returning.cpp  Select.cpp  TimeZone.cpp  Transaction.cpp  Type.cpp  aggregate_functions.cpp  assertThrow.h  exceptions.cpp  exists.cpp  make_test_connection.h  operator.cpp  truncate.cpp
tests/scripts/: CMakeLists.txt  custom_types.csv  custom_types.h  ddl2cpp_sample_bad_type_int_array.sql  ddl2cpp_sample_bad_type_int_array2.sql  ddl2cpp_sample_bad_type_int_array3.sql  ddl2cpp_sample_good_custom_type.cpp  ddl2cpp_sample_good_custom_type.csv  ddl2cpp_sample_good_custom_type.sql  ddl2cpp_sample_good_custom_type.template  ddl2cpp_sample_good_custom_type_new.csv  ddl2cpp_sample_good_custom_type_old.csv
(+709 files in other folders)
